--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ body {
 
 .row {
     width: 100%;
-    height: 500px;
     background: no-repeat center center;
     background-size: cover;
     margin-top: 30px;
@@ -40,6 +39,8 @@ body {
 
 .dash {
     font-size: 25px;
+    height: 450px;
+    margin-top: 40px;
 }
 
 .x_axis {
@@ -54,6 +55,8 @@ body {
     border: 1px solid #38b39a; 
     text-decoration: none;
     transition-duration: 0.3s;
+    margin-right: 10px;
+    margin-top: 5px;
 }
 
 .button:hover {
